--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="sidebar">
       <!-- Sidebar Navigation -->
       <div class="logo">HRHR</div>
-      <ul id="sideMenu">
+      <ul class="sideMenu" id="sideMenu">
         <li>Dashboard</li>
         <li>Calendar</li>
         <li>Recruitment <span class="badge">10</span></li>
