--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HR Dashboard</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="assets/styles.css" />
   </head>
   <body class="menu-miz">
     <div class="sidebar">
@@ -35,7 +35,7 @@
             <div class="user-profile">
               <img
                 style="width: 40px; height: 40px"
-                src="35.50.m.jpg"
+                src="assets/35.50.m.jpg"
                 alt="User Profile"
               />
               <span>John Doe</span>
@@ -234,7 +234,7 @@
         <li>
           <img
             class="profile-pic-notification"
-            src="35.50.m.jpg"
+            src="assets/35.50.m.jpg"
             alt="Avatar"
           />
           <span>Mark Jacobs has applied for leave...</span>
@@ -243,7 +243,7 @@
         <li>
           <img
             class="profile-pic-notification"
-            src="35.50.m.jpg"
+            src="assets/35.50.m.jpg"
             alt="Avatar"
           />
           <span>Sat has applied for leave...</span>
@@ -252,7 +252,7 @@
         <li>
           <img
             class="profile-pic-notification"
-            src="35.50.m.jpg"
+            src="assets/35.50.m.jpg"
             alt="Avatar"
           />
           <span>Mat has applied for leave...</span>
@@ -261,7 +261,7 @@
         <li>
           <img
             class="profile-pic-notification"
-            src="35.50.m.jpg"
+            src="assets/35.50.m.jpg"
             alt="Avatar"
           />
           <span>Unni has applied for leave...</span>
@@ -270,7 +270,7 @@
         <li>
           <img
             class="profile-pic-notification"
-            src="35.50.m.jpg"
+            src="assets/35.50.m.jpg"
             alt="Avatar"
           />
           <span>Jacob has applied for leave...</span>
@@ -290,90 +290,7 @@
         <button class="yes" onclick="confirmAction()">YES</button>
       </div>
     </div>
-
-    <script>
-      function updateProgress(percent) {
-        const rightBar = document.getElementById("right-bar");
-        const leftBar = document.getElementById("left-bar");
-        const progressValue = document.getElementById("progress-value");
-
-        let angle = percent * 3.6;
-
-        if (percent <= 50) {
-          rightBar.style.transform = `rotate(${angle}deg)`;
-          leftBar.style.transform = "rotate(180deg)";
-        } else {
-          rightBar.style.transform = "rotate(180deg)";
-          leftBar.style.transform = `rotate(${angle - 180}deg)`;
-        }
-
-        progressValue.textContent = `50%`;
-      }
-
-      // Example usage
-      let progress = 0;
-      const interval = setInterval(() => {
-        if (progress >= 100) {
-          clearInterval(interval);
-        } else {
-          progress++;
-          updateProgress(progress);
-        }
-      }, 50);
-
-      function showPopup(status, name) {
-        document.getElementById("popup").style.display = "block";
-        document.getElementById("output").innerHTML = status;
-        document.getElementById("name").innerHTML = name;
-      }
-
-      function hidePopup() {
-        document.getElementById("popup").style.display = "none";
-      }
-
-      function confirmAction() {
-        console.log("Confirm Action");
-        hidePopup();
-      }
-
-      const listItems = document.querySelectorAll("#sideMenu li");
-
-      // Add click event listener to each <li> element
-      listItems.forEach((item) => {
-        item.addEventListener("click", () => {
-          alert(`You clicked on ${item.textContent}`);
-        });
-      });
-
-      const divItems = document.querySelectorAll("#topbar .item");
-
-      divItems.forEach((item) => {
-        item.addEventListener("click", () => {
-          // Remove 'clicked' class from all items
-          divItems.forEach((i) => i.classList.remove("clicked"));
-          // Add 'clicked' class to the clicked item
-          item.classList.add("clicked");
-          alert(`You clicked on ${item.textContent}`);
-        });
-      });
-
-      function monthView(e) {}
-      const monthbutton = document.getElementById("monthButton");
-      const listbutton = document.getElementById("listButton");
-
-      // Add click event listener to the button
-      monthbutton.addEventListener("click", () => {
-        monthbutton.classList.remove("button2");
-        monthbutton.classList.add("button1");
-        listbutton.classList.add("button2");
-        alert("Month View clicked!");
-      });
-      listbutton.addEventListener("click", () => {
-        listbutton.classList.remove("button2");
-        listbutton.classList.add("button1");
-        monthbutton.classList.add("button2");
-        alert("List View clicked!");
-      });
-    </script>
+    <script src="assets/menumiz.js"></script>
+   
   </body>
 </html>
